[package]
name = "easy_cap"
version = "0.1.0"
authors = ["kirohy <hiroki.ysok.nye@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "^0.4"
dirs = "2.0"
gtk = "^0.8.0"
gdk = "0.12.0"
gdk-pixbuf = "0.8.0"
rand = "^0.7"
rand_distr = "0.2.2"
rayon = "1.3.0"
relm = "0.19.0"
relm-derive = "^0.19.0"
relm-attributes = "0.16.0"
rscam = "0.5.5"
